# mmap-ds

./: LICENSE  README.md  pyproject.toml
src/mmap_ds/: test_ds.py
