[project]
name = "mmap-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Shen", email = "jshen2014@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.1.2",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]

[project.scripts]
mmap-ds = "mmap_ds:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
